feat: implemented set role endpoint
