# routes/api.php
@@ -3,8 +3,7 @@
 use App\Constants\Roles;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\PlaceholderController;
-use App\Http\Controllers\Auth\TenantAuthController;
+use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\Auth\VerificationController;
 
 /*
@@ -23,8 +22,9 @@ Route::middleware(['auth:api', 'role:' . Roles::TENANT])->prefix('v1')->group(fu
 });
 
 Route::prefix('v1')->group(function () {
-    Route::post('/tenant/register', [TenantAuthController::class, 'register']);
-    Route::post('/tenant/login', [TenantAuthController::class, 'login']);
+    Route::post('/set-role', [AuthController::class, 'setRole']);
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/login', [AuthController::class, 'login']);
     Route::post('/{user}/send-verification-email', [VerificationController::class, 'sendEmail']);
     Route::post('/verify-email', [VerificationController::class, 'verifyEmail']);
 });
